# rust-tokio-ai-server

./: Cargo.toml  LICENSE  db.sqlite  test_db_0.sqlite  test_db_1.sqlite  test_db_2.sqlite  test_db_3.sqlite  test_db_4.sqlite  test_db_5.sqlite  test_db_6.sqlite
.github/: copilot-instructions.md
migrations/: 20250716125628_initial.down.sql  20250716125628_initial.up.sql
src/: lib.rs  main.rs
src/api/: conversations.rs  mod.rs
src/core/: assistant.rs  mod.rs  services.rs  traits.rs
src/infrastructure/: database.rs  entities.rs  mod.rs  repositories.rs  traits.rs
static/: index.html
static/css/: index.1c791aa0.css
static/js/: index.02e282bf.js  lib-react.e04450e5.js
tests/: api_integration_tests.rs  auth_tests.rs  db_tests.rs  inference_tests.rs
